fixed flicker of title

--- a/general.css
+++ b/general.css
@@ -269,6 +269,7 @@ header.fillscreen>.fillscreen-center {
 
 .typewriter {
   position: relative;
+  animation: fadeIn 0.5s forwards;
 }
 
 .typewriter::before,
